--- a/.github/workflows/unit_tests.yaml
+++ b/.github/workflows/unit_tests.yaml
@@ -27,3 +27,13 @@ jobs:
 
       - name: Run tests
         run: pytest
+        env:
+          MODEL_PATH: './housing_prices_dashboard/model.joblib'
+          HOST: "127.0.0.1"
+          PORT: "5000"
+          DATABASE_URL: "sqlite:///./users.db"
+          DATA_PATH: './housing_prices_dashboard/housing.csv'
+          SECRET_KEY: "SuperSecretKey"
+          ALGORITHM: "HS256"
+          ISSUER: "http://127.0.0.1:5000"
+          AUDIENCE: "FastAPI"
