--- a/.github/workflows/build_and_test_images.yaml
+++ b/.github/workflows/build_and_test_images.yaml
@@ -23,6 +23,9 @@ jobs:
     - name: Run container
       run: docker run -d -p 5000:5000 --name my-app my-backend-app
 
+    - name: Check container logs
+      run: docker logs my-app
+
     - name: Wait for app to start
       run: sleep 5
 
