--- a/.github/workflows/build_and_test_images.yaml
+++ b/.github/workflows/build_and_test_images.yaml
@@ -23,14 +23,14 @@ jobs:
     - name: Run container
       run: docker run -d -p 5000:5000 --name my-app my-backend-app
 
+    - name: Wait for app to start
+      run: sleep 10
+
     - name: Check container status
       run: docker ps -a
 
     - name: Check container logs
-      run: docker logs --no-log-prefix my-app
-
-    - name: Wait for app to start
-      run: sleep 20
+      run: docker logs my-app
 
     - name: Install curl and jq
       run: sudo apt-get update && sudo apt-get install -y curl jq
