--- a/.github/workflows/build_and_test_images.yaml
+++ b/.github/workflows/build_and_test_images.yaml
@@ -41,6 +41,9 @@ jobs:
           -H "Content-Type: application/json" \
           -d '{"username":"X","password":"abc123"}'
 
+    - name: Check container logs
+      run: docker logs my-app
+
     - name: Test /login
       id: login
       run: |
@@ -50,6 +53,9 @@ jobs:
         echo "$response"
         token=$(echo "$response" | jq -r '.access_token')
         echo "TOKEN=$token" >> $GITHUB_ENV
+
+    - name: Check container logs
+      run: docker logs my-app
 
     - name: Test /predict
       run: |
@@ -67,6 +73,9 @@ jobs:
             "median_income": 5.5789,
             "ocean_proximity": "NEAR OCEAN"
           }'
+
+    - name: Check container logs
+      run: docker logs my-app
 
     - name: Stop container
       run: docker rm -f my-app
